vlib/v/checker/tests/generics_fn_called_multi_args_mismatch.vv
fn main() {
	x := 'ab'.runes()[..1]
	foo_str(1, x)
}

fn foo_str<T>(b T, a string) {
}
